# GodotHub

./: CMakeLists.txt  LICENSE  README.md  SConstruct_template  configs.json  indexed_modules.json
HotWaterCLI /: main.cpp  my_cli
file_templates/: mod_template.gdextension
src/: action_dispatch_params.h  action_dispatcher.cpp  action_dispatcher.h  common_types.h  configs_loader.cpp  constants.h  main.cpp  modules.json
src/action_dispatch/: action_dispatch_params.h  action_dispatcher.cpp  action_dispatcher.h  validate_params.cpp  validate_params.h
src/actions/: action_abstract.cpp  action_abstract.h  action_field_types.h  action_invoker.cpp  action_invoker.h  actions_enum.cpp  actions_enum.h  actions_switch_cases.cpp  actions_switch_cases.h  create_file.cpp  create_file.h  hello_world_action.cpp  hello_world_action.h  registered_actions.h
src/actions/actions_classes/: add_module_action.cpp  add_module_action.h  create_file.cpp  create_file.h  create_project_action.cpp  create_project_action.h  hello_world_action.cpp  hello_world_action.h  initialize_structure_action.cpp  initialize_structure_action.h  install_godot_action.cpp  install_godot_action.h  install_prerequisites_action.cpp  install_prerequisites_action.h  list_project_modules_action.cpp  list_project_modules_action.h  list_projects_action.cpp  list_projects_action.h  remove_module_action.cpp  remove_module_action.h
src/actions/tasks/: task_abstract.cpp  task_abstract.h
src/cmd/: IO_singleton.cpp  IO_singleton.h  abstract_IO.h  cmd_input.cpp  cmd_input.h  cmd_request_response.cpp  cmd_request_response.h
src/configs/: config.cpp  config.h
src/indexed_data/: load_data.cpp  load_data.h  project_data.h  save_data.cpp  save_data.h
src/tasks/: tasks.cpp  tasks.h
src/utils/: utils.cpp  utils.h
